# event-formation-unit

./: .atom-build.yml  .clang-format  .dockerignore  .gitignore  .gitlab-ci.yml  .idea  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.deploy  Dockerfile_entrypoint.sh  Jenkinsfile  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  Utilities.cmake  conanfile.txt  cppcheck_exclude_tests.sh  cppcheck_filelist.sh  docker-compose.yml  docker_launch.sh  generate-changelog.sh
dataformats/: CMakeLists.txt  README.md
dataformats/cncs2016/: .gitignore  Analyse.cpp  Analyse.h  Args.cpp  Args.h  CMakeLists.txt  Makefile  README.md  allfiles.json  analyse.cpp  anton.json  batchreader.cpp  heatmap.py  histogram.py  main.c  main.cpp  matplotlibcpp.h  multiplot.py  parsefiles.sh
dataformats/multiblade/: jadaq.lua
dataformats/multigrid/: .gitignore  CMakeLists.txt  Makefile  README.md  allfiles.json  mesytec_histogram.py  sis3153.lua
dataformats/sonde/: geometry.py  sonde_plugin.lua
dataformats/vmm/: vmm2_plugin.lua  vmm3_plugin.lua  vmm3a_plugin.lua  vmm3b_plugin.lua
dynamic_pipelines/: CMakeLists.txt  Makefile  Pipeline.cpp  Pipeline.h  liba.cpp  liba.h  libb.cpp  main.cpp
libs/: CMakeLists.txt  Makefile
libs/NMXEvent/: Makefile  testEventBasic.cpp
libs/PQ/: Makefile  testPQBasic.cpp  testPQMin.cpp  testPQSpeed.cpp
libs/Socket/: Socket.cpp
libs/Timer/: Timer.cpp
libs/include/: BitMath.h  Counter.h  NMXEvent.h  SPSCFifo.h  Socket.h  StatCounter.h  TSCTimer.h  Thread.h  Timer.h  gccintel.h
libs/source/: Socket.cpp  TSCTimer.cpp  Thread.cpp  Timer.cpp
libs/test/: BitMathTest.cpp  CMakeLists.txt  SocketTest.cpp
prototype2/: CMakeLists.txt  CMakeListsUnitTests.txt  CMakeListsUtils.txt  CSPECChanConv.cpp  CSPECChanConv.h  CSPECData.cpp  CSPECData.h  Detector.h  EFUArgs.cpp  EFUArgs.h  Launcher.cpp  Launcher.h  Loader.cpp  Loader.h  Makefile  Makefile.config  Makefile.test  Producer.h  README.md  RingBuffer.cpp  RingBuffer.h  UnitTests.cmake  Utilities.cmake  cspec.cpp  doxyfile  make_ubuntu.sh  nmx.cpp  pipeline.cpp  print_arch  udpraw.cpp  udprawtx.cpp
prototype2/CLI/: CLI11.hpp
prototype2/NMX/: Clusterer.cpp  Clusterer.h  ClustererTest.cpp  EventNMX.cpp  EventNMX.h  EventTest.cpp  Eventlet.cpp  Eventlet.h  EventletTest.cpp  Geometry.cpp  Geometry.h  GeometryTest.cpp  Parser.cpp  Parser.h  ParserClusterer.cpp  ParserClusterer.h  Time.cpp  Time.h  TimeTest.cpp  nmx.cpp
prototype2/adc_readout/: AdcBufferElements.h  AdcDataProcessor.cpp  AdcDataProcessor.h  AdcParse.cpp  AdcParse.h  AdcReadout.cpp  AdcReadout.h  AdcReadoutBase.cpp  AdcReadoutBase.h  AdcReadoutConstants.h  AdcReadoutCore.cpp  AdcReadoutCore.h  AdcSettings.cpp  AdcSettings.h  AdcTimeStamp.cpp  AdcTimeStamp.h  CMakeLists.txt  ChannelID.h  CircularBuffer.h  DelayLineEventFormation.cpp  DelayLineEventFormation.h  DelayLinePositionCalc.cpp  DelayLinePositionCalc.h  DelayLineProcessing.cpp  DelayLineProcessing.h  DelayLineProducer.cpp  DelayLineProducer.h  EventBuffer.cpp  EventBuffer.h  EventData.h  EventSerializer.cpp  EventSerializer.h  MonitorPeakData.fbs  MonitorPeakData_generated.h  PeakFinder.cpp  PeakFinder.h  PulseBuffer.cpp  PulseBuffer.h  PulseParameters.cpp  PulseParameters.h  (+6 more)
prototype2/common/: BitMath.h  Buffer.h  BufferTest.cpp  CMakeLists.txt  DataSave.cpp  DataSave.h  DataSaveTest.cpp  Detector.h  DetectorModuleRegister.cpp  DetectorModuleRegister.h  DetectorTest.cpp  DumpFile.h  DumpFileTest.cpp  DynamicHist.cpp  EFUArgs.cpp  EFUArgs.h  EFUArgsTest.cpp  EFUStats.cpp  EFUStats.h  ESSGeometry.h  ESSGeometryBenchmarkTest.cpp  ESSGeometryTest.cpp  EV42Serializer.cpp  EV42Serializer.h  EV42SerializerTest.cpp  FBSerializer.cpp  FBSerializer.h  FBSerializerTest.cpp  HistSerializer.cpp  HistSerializer.h  HistSerializerTest.cpp  Hists.cpp  Hists.h  HistsTest.cpp  JsonFile.h  Log.cpp  Log.h  MultiGridGeometry.h  MultiGridGeometryTest.cpp  NewStats.cpp  (+34 more)
prototype2/cspec/: CSPECChanConv.cpp  CSPECChanConv.h  CSPECChanConvTest.cpp  CSPECData.cpp  CSPECData.h  CSPECDataTest.cpp  CSPECEvent.h  CSPECEventTest.cpp  CalibrationFile.cpp  CalibrationFile.h  CalibrationFileTest.cpp  cspec.cpp
prototype2/cspec2/: cspec.cpp  cspec2.cpp
prototype2/cspecgen/: CspecArgs.cpp  CspecArgs.h  cspecfile.cpp  cspecgen.cpp
prototype2/efu/: CMakeLists.txt  Executing artefacts.md  ExitHandler.cpp  ExitHandler.h  HwCheck.cpp  HwCheck.h  Launcher.cpp  Launcher.h  Loader.cpp  Loader.h  Parser.cpp  Parser.h  ParserTest.cpp  Server.cpp  Server.h  ServerTest.cpp  efu.md  main.cpp  pipeline.cpp
prototype2/gdgem/: CMakeLists.txt  GdGem.cpp  GdGemBase.cpp  GdGemBase.h  GdGemBaseTest.cpp  GdGemBaseTestData.h  GdGemReadout.cpp  GdGemReadoutTest.cpp  NMXConfig.cpp  NMXConfig.h  NMXConfigTest.cpp  README.md  gdgem.cpp  gdgemh5.cpp  gdgemsrs.cpp  nmx_config.json
prototype2/generators/: CMakeLists.txt  ReaderHits.cpp  ReaderHits.h  generator.cpp
prototype2/jalousie/: BuilderReadouts.h  BuilderReadoutsTest.cpp  CMakeLists.txt  CdtFile.cpp  CdtFile.h  CdtFileTest.cpp  Config.cpp  Config.h  Jalousie.cpp  JalousieBase.cpp  JalousieBase.h  Readout.cpp  Readout.h  ReadoutTest.cpp  SumoMappings.cpp  SumoMappings.h  SumoMappingsTest.cpp
prototype2/makefiles/: Makefile.config  Makefile.hdf5  Makefile.help  Makefile.test
prototype2/mgjson/: MGJsonArgs.cpp  MGJsonArgs.h  dgmgjson.cpp
prototype2/minimaldetector/: CMakeLists.txt  minimaldetector.cpp
prototype2/multiblade/: CMakeLists.txt  CMakelists.txt  MBCaen.cpp  MBCaenBase.cpp  MBCaenBase.h  MBCaenBaseTest.cpp  mbcaen.cpp  mbprocesstextfile.cpp  mbprofiling.cpp  mbtext2udp.cpp
prototype2/multigrid/: AbstractBuilder.h  CMakeLists.txt  Config.cpp  Config.h  ConfigTest.cpp  MGMesytec.cpp  MGMesytecBase.cpp  MGMesytecBase.h  MGMesytecBaseTest.cpp  MgConfig.cpp  MgConfig.h  MgConfigTest.cpp  Multigrid.cpp  MultigridBase.cpp  MultigridBase.h  MultigridBaseTest.cpp  README.md  mgcncs.cpp  mgcncs2.cpp  (+1 more)
src/: CMakeLists.txt  README.md  doxyfile
udp/: Args.cpp  Args.h  CMakeLists.txt  Makefile  Server.cpp  Socket.cpp  Socket.h  servs  udprx.cpp  udpserver.c  udptx.cpp
(+2810 files in other folders)
